# quik-tracy

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: build-tracy-tools.yml
examples/: tracy_comparison_example.html
src/quik_tracy/: __init__.py  __main__.py  api.py  cli.py
src/quik_tracy/builders/: __init__.py  api.py  cli.py
src/quik_tracy/builders/docker/: Dockerfile.base  Dockerfile.capture  Dockerfile.csvexport  Dockerfile.profiler
src/quik_tracy/builders/engines/: __init__.py  base.py  docker.py  local.py
src/quik_tracy/capture/: __init__.py  base.py  container.py  process.py
src/quik_tracy/compare/: __init__.py  base.py  csv.py  hdf5.py  html.py
src/quik_tracy/export/: __init__.py  base.py  container.py  process.py
src/quik_tracy/profiler/: __init__.py  base.py  container.py  process.py
src/quik_tracy/report/: __init__.py  base.py  csv.py  hdf5.py  html.py
src/quik_tracy/tools/: __init__.py  cmake.py  docker.py  process.py
